[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/test_skin/taiko-bar-left.png" type="Texture" id=1]
[ext_resource path="res://resources/test_skin/taiko-drum-inner.png" type="Texture" id=2]
[ext_resource path="res://resources/test_skin/taiko-drum-outer.png" type="Texture" id=3]
[ext_resource path="res://resources/ingame.tres" type="Theme" id=4]
[ext_resource path="res://scenes/playfield/input_indicator.gd" type="Script" id=5]
[ext_resource path="res://resources/test_skin/taiko-normal-hitnormal.wav" type="AudioStream" id=6]
[ext_resource path="res://resources/test_skin/taiko-normal-hitclap.wav" type="AudioStream" id=7]

[node name="InputIndicator" type="TextureRect"]
anchor_bottom = 1.0
margin_right = 254.0
texture = ExtResource( 1 )
expand = true
script = ExtResource( 5 )

[node name="LeftDon" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 0.5
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="LeftKat" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 0.5
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
flip_h = true

[node name="RightDon" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
flip_h = true

[node name="RightKat" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="Combo" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
text = "0"
align = 1
valign = 1

[node name="LeftDonAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="LeftKatAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="RightDonAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="RightKatAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
